Switch to use a fork of echo-swagger instead
